configura build de aplicacion cliente y scrip para servir la app
