# server/api/swagger.yaml
@@ -7,7 +7,7 @@ info:
   title: Quena Store
   contact:
     name: bastian.carvajal@sansano.usm.cl
-host: localhost:5000
+host: api.quenamti.bastianc.info
 basePath: /
 schemes:
   - http
@@ -19,10 +19,18 @@ paths:
       operationId: findAllProducto
       summary: Lista todos los productos
       description: Devuelve listado de Producto
+      tags:
+        - producto
       produces:
         - application/json
         - application/xml
         - text/html
+      parameters:
+        - in: query
+          name: categoria
+          description: find by Categoria
+          required: false
+          type: string
       responses:
         "200":
           description: successful operation
@@ -34,6 +42,8 @@ paths:
       operationId: addProducto
       summary: Crea un nuevo Producto
       description: Crea un Producto al completar a traves de un formulario / json, devuelve el Producto
+      tags:
+        - producto
       consumes:
         - application/json
       produces:
@@ -61,6 +71,8 @@ paths:
       operationId: findOneProducto
       summary: Detalles de un producto
       description: Devuelve un Producto por su ID
+      tags:
+        - producto
       produces:
         - application/json
         - application/xml
@@ -82,6 +94,8 @@ paths:
       operationId: updateProducto
       summary: Actualiza un Producto
       description: Actualiza un Producto a traves de un formulario / json, devuelve el Producto
+      tags:
+        - producto
       consumes:
         - application/json
       produces:
@@ -115,6 +129,8 @@ paths:
       operationId: removeProducto
       summary: Elimina un Producto
       description: Elimina un Producto por ID
+      tags:
+        - producto
       produces:
         - application/json
         - application/xml
@@ -139,6 +155,8 @@ paths:
       operationId: findAllCategoria
       summary: Lista todos los categorias
       description: Devuelve listado de Categoria
+      tags:
+        - categoria
       produces:
         - application/json
         - application/xml
@@ -154,6 +172,8 @@ paths:
       operationId: addCategoria
       summary: Crea un nuevo Categoria
       description: Crea un Categoria al completar a traves de un formulario / json, devuelve el Categoria
+      tags:
+        - categoria
       consumes:
         - application/json
       produces:
@@ -181,6 +201,8 @@ paths:
       operationId: findOneCategoria
       summary: Detalles de un categoria
       description: Devuelve un Categoria por su ID
+      tags:
+        - categoria
       produces:
         - application/json
         - application/xml
@@ -202,6 +224,8 @@ paths:
       operationId: updateCategoria
       summary: Actualiza un Categoria
       description: Actualiza un Categoria a traves de un formulario / json, devuelve el Categoria
+      tags:
+        - categoria
       consumes:
         - application/json
       produces:
@@ -235,6 +259,8 @@ paths:
       operationId: removeCategoria
       summary: Elimina un Categoria
       description: Elimina un Categoria por ID
+      tags:
+        - categoria
       produces:
         - application/json
         - application/xml
@@ -259,6 +285,8 @@ paths:
       operationId: findAllEstablecimiento
       summary: Lista todos los establecimientos
       description: Devuelve listado de Establecimientos
+      tags:
+        - establecimiento
       produces:
         - application/json
         - application/xml
@@ -274,6 +302,8 @@ paths:
       operationId: addEstablecimiento
       summary: Crea un nuevo Establecimiento
       description: Crea un Establecimiento al completar a traves de un formulario / json, devuelve el Establecimiento
+      tags:
+        - establecimiento
       consumes:
         - application/json
       produces:
@@ -301,6 +331,8 @@ paths:
       operationId: findOneEstablecimiento
       summary: Detalles de un establecimiento
       description: Devuelve un Establecimiento por su ID
+      tags:
+        - establecimiento
       produces:
         - application/json
         - application/xml
@@ -318,6 +350,64 @@ paths:
             $ref: '#/definitions/Establecimiento'
         "404":
           description: Object not found
+    put:
+      operationId: updateEstablecimiento
+      summary: Actualiza un Establecimiento
+      description: Actualiza un Establecimiento a traves de un formulario / json, devuelve el Establecimiento
+      tags:
+        - establecimiento
+      consumes:
+        - application/json
+      produces:
+        - application/json
+        - application/xml
+        - text/html
+      parameters:
+        - in: path
+          name: establecimientoId
+          description: Establecimiento ID
+          required: true
+          type: string
+        - in: body
+          name: body
+          description: Establecimiento object para agregar
+          required: false
+          schema:
+            $ref: "#/definitions/Establecimiento"
+      responses:
+        "200":
+          description: successful operation
+          schema:
+            $ref: "#/definitions/Establecimiento"
+        "405":
+          description: Validation exception
+        "404":
+          description: Producto not found
+        "400":
+          description: Invalid ID supplied
+    delete:
+      operationId: removeEstablecimiento
+      summary: Elimina un Establecimiento
+      description: Elimina un Establecimiento por ID
+      tags:
+        - establecimiento
+      produces:
+        - application/json
+        - application/xml
+        - text/html
+      parameters:
+        - in: path
+          name: establecimientoId
+          description: Establecimiento ID
+          required: true
+          type: string
+      responses:
+        "200":
+          description: successful operation
+        "404":
+          description: Establecimiento not found
+        "400":
+          description: Invalid ID supplied
 
   /establecimientos/{establecimientoId}/inventario:
     x-swagger-router-controller: inventario
@@ -325,6 +415,8 @@ paths:
       operationId: findAllInventarioInEstablecimiento
       summary: Detalles de inventario
       description: Devuelve todo el inventario de un Establecimiento por su ID
+      tags:
+        - establecimiento
       produces:
         - application/json
         - application/xml
@@ -348,6 +440,8 @@ paths:
       operationId: addInventarioInEstablecimiento
       summary: Actualiza un Categoria
       description: Actualiza un Categoria a traves de un formulario / json, devuelve el Categoria
+      tags:
+        - establecimiento
       consumes:
         - application/json
       produces:
@@ -384,6 +478,8 @@ paths:
       operationId: findOneInventarioInEstablecimiento
       summary: Detalles de un establecimiento
       description: Devuelve un Establecimiento por su ID
+      tags:
+        - establecimiento
       produces:
         - application/json
         - application/xml
@@ -410,6 +506,8 @@ paths:
       operationId: updateInventarioInEstablecimiento
       summary: Actualiza un Inventario
       description: Actualiza un Inventario a traves de un formulario / json, devuelve el Inventario
+      tags:
+        - establecimiento
       consumes:
         - application/json
       produces:
@@ -448,6 +546,8 @@ paths:
       operationId: renoveInventarioInEstablecimiento
       summary: Elimina un Inventario
       description: Elimina un Inventario por ID
+      tags:
+        - establecimiento
       produces:
         - application/json
         - application/xml
@@ -475,6 +575,8 @@ paths:
       operationId: findAllProductoInEstablecimiento
       summary: Detalles de productos
       description: Devuelve todo los productos de un Establecimiento por su ID
+      tags:
+        - establecimiento
       produces:
         - application/json
         - application/xml
@@ -501,6 +603,8 @@ paths:
       operationId: findOneProductoInEstablecimiento
       summary: Detalles de un producto
       description: Devuelve un Producto en un Establecimiento por su ID
+      tags:
+        - establecimiento
       produces:
         - application/json
         - application/xml
@@ -532,6 +636,8 @@ paths:
       operationId: findAllVentaInEstablecimiento
       summary: Listado de ventas en extablecimiento
       description: Devuelve todas las ventas de un Establecimiento por su ID
+      tags:
+        - establecimiento
       produces:
         - application/json
         - application/xml
@@ -555,6 +661,8 @@ paths:
       operationId: addVentaInEstablecimiento
       summary: Agrega una Venta a un Establecimiento
       description: Crea una Venta, en un Establecimiento, a traves de un formulario / json, devuelve la Venta
+      tags:
+        - establecimiento
       consumes:
         - application/json
       produces:
@@ -591,6 +699,8 @@ paths:
       operationId: findOneVentaInEstablecimiento
       summary: Detalles de venta en extablecimiento
       description: Devuelve una Ventas de un Establecimiento por su ID
+      tags:
+        - establecimiento
       produces:
         - application/json
         - application/xml
@@ -619,6 +729,8 @@ paths:
       operationId: updateVentaInEstablecimiento
       summary: Actualiza una Venta de un Establecimiento
       description: Actualiza una Venta, de un Establecimiento, a traves de un formulario / json, devuelve la Venta
+      tags:
+        - establecimiento
       consumes:
         - application/json
       produces:
@@ -893,8 +1005,6 @@ definitions:
   Direccion:
     type: object
     properties:
-      _id:
-        type: string
       pais:
         type: string
       region:
@@ -923,8 +1033,8 @@ definitions:
         type: string
       nombre:
         type: string
-#      direccion:
-#        $ref: "#/definitions/Direccion"
+      direccion:
+        $ref: "#/definitions/Direccion"
     required:
       - nombre
 
@@ -961,10 +1071,8 @@ definitions:
         type: string
       origen:
         type: string
-      categorias:
-        type: array
-        items:
-          $ref: "#/definitions/Categoria"
+      categoria:
+        $ref: "#/definitions/Categoria"
       caracteristicas:
         type: array
         items:
